--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,5 +30,8 @@
 		"svelte": "^5.0.0",
 		"tailwindcss": "^4.0.0",
 		"vite": "^7.0.4"
+	},
+	"dependencies": {
+		"lucide-svelte": "^0.543.0"
 	}
 }
