--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
 	},
 	"dependencies": {
 		"axios": "^1.11.0",
-		"lucide-svelte": "^0.543.0"
+		"lucide-svelte": "^0.543.0",
+		"svelte-sonner": "^1.0.5"
 	}
 }
