--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "multer": "^2.0.2",
     "mysql2": "^3.14.4",
     "nodemon": "^3.1.10",
+    "qrcode": "^1.5.4",
     "sequelize": "^6.37.7"
   }
 }
